# license_client_c

./: CMakeLists.txt  Readme.md  main.c
src/: lic_client.c  lic_client.h
src/internal/: crypto.c  crypto.h  http.c  http.h  http_handler.c  http_handler.h  json_helpers.c  json_helpers.h  lic_client_internal.h
